# betterai-project

./: .gitignore  .gitmodules  PATIENT_CONTEXT_README.md  README.md  SETUP_COMPLETE.md  benchmark_plan.md  env_template.txt  main.ipynb  main.py  main_patients.py  pyproject.toml  requirements.txt
common/: get_source.py  tokenize.py  tokenize_alt.py
database/: database.py  triple.py  tripleset.py
database/rdf/: triple.py  tripleset.py
evaluation/: baselines.py  judge_claims.py  retrieval.py  run_eval.py
pipeline_01_processing/: main.py  pipeline.py  tokens_to_rdf.py
pipeline_02_retrieval/: README.md  main.py  model_handler.py  patient_context.py  pipeline.py  sources.py  summarize.py  tokens_to_query.py
pipeline_02_retrieval/patientDB/: connection.py  operations.py  schema.py
pipeline_02_retrieval/schemas/: doc.py  output.py
runs/: pubmedqa_baseline.jsonl
schemas/: schemas.py
tests/: test_dependency_parse.py  test_source_citations.py  test_tokens_to_rdf.py
